--- a/src/index.css
+++ b/src/index.css
@@ -7,7 +7,7 @@
 }
 
 /*App.js*/
-.intro{
+/* .intro{
   background-color: aliceblue;
   text-align: center;
 }
@@ -18,7 +18,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
-} 
+}  */
 
 /*Login*/
 .loginDetails{
