The web page changes title from All films to Favourite Films depending on if the user clicks Show Favourite Films or Show All Films on rendered page

--- a/src/index.css
+++ b/src/index.css
@@ -6,6 +6,15 @@
     min-width: 100vh;
 }
 
+.titleContainer{
+  width: 100%;
+  background-color: black;
+}
+
+.filmTitle{
+  color: aliceblue;
+}
+
 
 
 
