--- a/src/Pages/AddNewFilm.css
+++ b/src/Pages/AddNewFilm.css
@@ -1,6 +1,13 @@
+.newFilmBanner{
+  background-color: aliceblue;
+  display: grid;
+  margin-top: 0.5cm;
+  width: 100%;
+}
+
 .newFilmTitle{
-    background-color: aliceblue;
     margin-bottom: 0cm;
+    grid-column: 2;
   }
   
   .newFilmDetails{
@@ -15,6 +22,16 @@
     border-top: 0cm;
   }
   
+  .exitButton{
+    grid-column: 3;
+    background-color: red;
+    width: 0.75cm;
+    height: 0.5cm;
+    align-items: center;
+    margin-top: 0cm;
+    margin-right: 0cm;
+  }
+
   .titleBox{
     grid-row: 1;
     grid-column: 1;
